--- a/AB_test/AB_test.ipynb
+++ b/AB_test/AB_test.ipynb
@@ -649,7 +649,7 @@
    "id": "11d6e773",
    "metadata": {},
    "source": [
-    "#### Linear Regression CUPED"
+    "#### Linear Regression "
    ]
   },
   {
