--- a/AB_test/AB_test.ipynb
+++ b/AB_test/AB_test.ipynb
@@ -1001,7 +1001,7 @@
    "id": "20b7ad44",
    "metadata": {},
    "source": [
-    "#### Linear Regression CUPED"
+    "#### Linear Regression"
    ]
   },
   {
